--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,15 +3,41 @@
 p {
     font-size: 25px;
     text-align: center;
+    margin: 25px;
 
-}
-h2,h1  {
+    }
+h3,h2,h1  {
     text-align: center;
-}
+    }
+
 .container {
     display: flex;
     flex-flow: row;
-    flex-direction: initial;
+    justify-content: center;
+     align-items: center;
+    
+    }
 
+.menu li {
+    display: inline;
+    padding: 20px;
+    font-size: 20px;
+    }
 
-}
+.menu li a {
+
+    text-decoration: none;
+    color: rgb(236, 11, 11);
+    }
+
+    .menu li a:hover {
+    color: grey;
+    }
+
+    
+.social {
+        text-align: center;
+        padding:15px;
+    }
+
+ 
